creusot/tests/should_fail/opaque_unproveable.mlcfg

module OpaqueUnproveable_Test
  predicate opaque0 [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ())
  val opaque0 [#"../opaque_unproveable.rs" 9 4 9 27] (_1 : ()) : bool
    ensures { result = opaque0 _1 }
    
  let rec cfg test [#"../opaque_unproveable.rs" 14 0 14 13] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : ()) : ()
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  {
    goto BB0
  }
  BB0 {
    assert { [@expl:assertion] [#"../opaque_unproveable.rs" 16 18 16 29] opaque0 () };
    [#"../opaque_unproveable.rs" 14 14 17 1] _0 <- ([#"../opaque_unproveable.rs" 14 14 17 1] ());
    return _0
  }
  
end
